crates/iroha_data_model_derive/tests/ui_fail/has_origin_multiple_attributes.stderr
error: Only one #[has_origin] attribute is allowed!
 --> tests/ui_fail/has_origin_multiple_attributes.rs:5:1
  |
5 | #[has_origin(origin = Object)]
  | ^
